work-002 : добавлены/изменены тесты #002